fixed horizontal scroll bar

--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ nav {
 }
 
 .mealPreview {
-    width: 350px;
+    width: 300px;
     height: 350px;
     border-radius: 10px;
     overflow: hidden;
@@ -392,7 +392,7 @@ nav {
 }
 
 .ingredientContainer {
-    width: 60%;
+    width: 66%;
     display: flex;
     flex-direction: column;
     margin-left: 10px;
@@ -409,7 +409,7 @@ nav {
 
 .ingredients div {
     height: 15px;
-    width: 300px;
+    min-width: 200px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -417,7 +417,6 @@ nav {
     transition: 0.2s ease-in-out;
     padding: 5px;
 }
-
 .ingredients div:hover {
     cursor: pointer;
     background: linear-gradient(to right, #9c7c5e, #cfa57d);
